<resources>
    <string name="app_name">Todo</string>
    <string name="afroz_name">Afroz hossain</string>
    <string name="afroz_mail">afrozhossain@gmail.com</string>
    <string name="afroz_fb">fb.com/afroz.nero1</string>

    <string name="hridoy_name">Qazi Mahbubul Hasan</string>
    <string name="hridoy_mail">hridoyhasan14@gmail.com</string>
    <string name="hridoy_fb">fb.com/hridoy.prolife</string>

    <string name="noyon_name">Nayan Chakrabarty</string>
    <string name="noyon_mail">nayandcc5@gmail.com</string>
    <string name="noyon_fb">fb.com/ncbcse</string>

    <string name="taki_name">Shahariar Newaz Taki</string>
    <string name="taki_mail">shahariarnawshintaki@gmail.com</string>
    <string name="taki_fb">fb.com/shahariarnawshin.taki</string>

    <string name="gk_name">G.K.Snigdha</string>
    <string name="gk_mail">gksnigdhacse41@gmail.com</string>
    <string name="gk_fb">fb.com/100010615418972</string>


    <string name="text_on_off">How can I turn my alarm on or off?</string>
    <string name="text_add_remainder">How can I add my remainder?</string>
    <string name="text_priority">How does the priority work?</string>
    <string name="text_update_delete">How can I update or delete my remainder?</string>
    <string name="text_transfer">How do I share my app to others?</string>
    <string name="text_question">Did not find the answer to your questions?</string>
    <string name="todo">TODO</string>
    <string name="project_title">ADVANCED PROFESSIONAL COACHING WITH INDUSTRY ATTACHMENT</string>
    <string name="project_email">pd.sdmga@gmail.com</string>
    <string name="project_number">+88–02–8181286</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="dismiss">Dismiss</string>
    <string name="to_do">ToDo</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="home">Home</string>
    <string name="share">Share</string>
    <string name="setting">Setting</string>
    <string name="help">Help</string>
    <string name="contact_us">Contact Us</string>
    <string name="about">About</string>
    <string name="new_reminder">New Reminder</string>
    <string name="note">Note</string>
    <string name="ring">Ring</string>
    <string name="vibration">Vibration</string>
    <string name="save">save</string>
    <string name="update">update</string>
    <string name="delete">Delete</string>
    <string name="update_alarm">Update Alarm</string>
    <string name="and_todo">AND TODO</string>
    <string name="contact_form">Contact Us</string>
    <string name="contact_form_name">Your Name</string>
    <string name="contact_form_email">Your Email</string>
    <string name="contact_form_subject">Subject</string>
    <string name="contact_form_message">Message</string>
    <string name="contact_form_button">Send Message</string>
    <string name="contact_form_post_message">Please wait! We\'re sending your message to the support department...</string>
    <string name="contact_posted">Your message has been successfully delivered.</string>
    <string-array name="string_array_on_off">
        <item>Click on the right side circular shaped red green color mixed button to turn on an alarm.</item>
        <item>If the center of the circle shaped button is green it means your alarm is currently on and if it is red that means your alarm is off.</item>
    </string-array>

    <string-array name="string_array_remainder">
        <item>Click on the "+" button at the bottom of the screen to add an remainder.It will show you two buttons of priority you want.</item>
        <item>Select the priority you want.</item>
        <item>Type the title of your remainder at alarm field.</item>
        <item>Type the information or description about your remainder in the description field to set your remainder description.</item>
        <item>Pick the date you want to set alarm from the calender icon.</item>
        <item>Pick the time you want to set the alarm from the watch icon.</item>
        <item>Click save and you are good to go. Your alarm is set.</item>
    </string-array>

    <string-array name="string_array_priority">
        <item>In low priority by default only vibration is selected </item>
        <item>In high priority both ring and vibration is selected </item>
    </string-array>

    <string-array name="string_array_update_delete">
        <item>Swipe from right to left on your remainder to get the update or delete option.</item>
    </string-array>

    <string-array name="string_array_transfer">
        <item>Click the share button to share your app with others.</item>
    </string-array>
    <string-array name="string_array_question">
        <item>Yes</item>
        <item>No</item>
    </string-array>


</resources>
