<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#9CD7DF"
    android:padding="@dimen/padding_5dp">
    <TextView
        android:id="@+id/item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="@dimen/textsize_25sp"
        android:text="@string/title"
        android:textStyle="bold"
        android:textColor="#000"/>
    <TextView
        android:id="@+id/item_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="@dimen/textsize_20sp"
        android:text="@string/description"
        android:textColor="#000"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/marginbottom_4dp"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/item_date"
            android:textColor="#000"
            android:textSize="@dimen/textsize_25sp"
            android:text="@string/date"
            android:textStyle="bold"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/item_time"
            android:textColor="#000"
            android:textSize="@dimen/textsize_25sp"
            android:text="@string/time"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/img_item_ring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/alert_black"
            android:contentDescription="@string/todo" />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight=".5"/>
        <ImageView
            android:id="@+id/img_item_vibrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/vib_black"
            android:contentDescription="@string/todo" />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/btn_item_update"
            android:text="@string/update"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight=".5"/>

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/btn_item_delete"
            android:text="@string/delete"
            android:textStyle="bold"
            android:layout_gravity="center"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>


</LinearLayout>