<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/padding_8dp"
    card_view:cardElevation="2dp"
    android:background="@color/colorWhite"
    android:layout_margin="@dimen/margin_8dp"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_8dp"
                android:fontFamily="@font/aclonica"
                android:text="@string/new_reminder"
                android:textColor="#000"
                android:textSize="@dimen/textsize_25sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginstart_8dp"
            android:layout_marginBottom="@dimen/marginbottom_4dp"
            android:layout_marginEnd="@dimen/marginend_8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/edt_title"
                android:hint="@string/title"
                android:maxLength="50"
                android:textAllCaps="true"
                android:inputType="textNoSuggestions|textCapSentences"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/title_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity=""
                android:textSize="@dimen/textsize_12sp"/>


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginstart_8dp"
            android:layout_marginBottom="@dimen/marginbottom_4dp"
            android:layout_marginEnd="@dimen/marginend_8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/edt_note"
                android:hint="@string/note"
                android:inputType="textNoSuggestions|textCapSentences"
                android:maxLength="150"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/note_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity=""
                android:textSize="@dimen/textsize_12sp"/>

        </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/marginend_8dp"
                android:layout_marginBottom="@dimen/marginbottom_8dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgdate"
                    android:layout_width="@dimen/imagewidhth_40dp"
                    android:layout_height="@dimen/imageheight_40dp"
                    android:layout_margin="@dimen/margin_8dp"
                    android:src="@drawable/date"
                    android:contentDescription="@string/todo" />


                <TextView
                    android:id="@+id/daetsetter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_4dp"
                    android:textColor="#000"
                    android:layout_gravity="center" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
                <ImageView
                    android:id="@+id/imgtime"
                    android:layout_width="@dimen/imagewidhth_40dp"
                    android:layout_height="@dimen/imageheight_40dp"
                    android:layout_margin="@dimen/margin_4dp"
                    android:src="@drawable/time"
                    android:contentDescription="@string/todo" />


                <TextView
                    android:id="@+id/timesetter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:layout_gravity="center" />




            </LinearLayout>

            <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:padding="0dp">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/cb_ring"
                android:textColor="#000"
                android:layout_marginStart="@dimen/marginstart_8dp"
                android:text="@string/ring"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/marginstart_8dp"
                android:id="@+id/cb_vibration"
                android:textColor="#000"
                android:text="@string/vibration"/>
           </LinearLayout>


            <Button
                android:id="@+id/btn_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="sans-serif-medium"
                android:text="@string/save" />

        </LinearLayout>

    </ScrollView>

</androidx.cardview.widget.CardView>